--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ro">
 <head>
   <meta charset="utf-8" />
-  <title>Magazin</title>
+  <title>Magazin de haine </title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
