Am adaugat pagini noi

--- a/contacte.html
+++ b/contacte.html
@@ -2,22 +2,23 @@
 <html lang="ro">
 <head>
   <meta charset="utf-8">
-  <title>Magazin - Acasă</title>
+  <title>Magazin - Contacte</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="navbar">
     <div class="brand">Magazin</div>
     <div class="links">
-      <a href="index.html"class="active">Acasă</a>
+      <a href="index.html">Acasă</a>
       <a href="produse.html">Produse</a>
-      <a href="contacte.html">Contacte</a>
+      <a href="contacte.html" class="active">Contacte</a>
     </div>
   </div>
 
   <div class="content">
-    <p>Aici găsiți cele mai bune produse la prețuri avantajoase.</p>
+    <h1>Contacte</h1>
+    <p>Email: contact@magazin.ro</p>
+    <p>Telefon: +373 600 00 000</p>
   </div>
 </body>
 </html>
-
