--- a/produse.html
+++ b/produse.html
@@ -2,22 +2,26 @@
 <html lang="ro">
 <head>
   <meta charset="utf-8">
-  <title>Magazin - Acasă</title>
+  <title>Magazin - Produse</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="navbar">
     <div class="brand">Magazin</div>
     <div class="links">
-      <a href="index.html"class="active">Acasă</a>
-      <a href="produse.html">Produse</a>
+      <a href="index.html">Acasă</a>
+      <a href="produse.html" class="active">Produse</a>
       <a href="contacte.html">Contacte</a>
     </div>
   </div>
 
   <div class="content">
-    <p>Aici găsiți cele mai bune produse la prețuri avantajoase.</p>
+    <h1>Produsele noastre</h1>
+    <ul>
+      <li>Tricou – 100 lei</li>
+      <li>Blugi – 250 lei</li>
+      <li>Hanorac – 180 lei</li>
+    </ul>
   </div>
 </body>
 </html>
-
