Am completat pagina Acasa si Produse

--- a/contacte.html
+++ b/contacte.html
@@ -2,12 +2,12 @@
 <html lang="ro">
 <head>
   <meta charset="utf-8">
-  <title>Magazin - Contacte</title>
+  <title>Lumi - Contacte</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="navbar">
-    <div class="brand">Magazin</div>
+    <div class="brand">Lumi</div>
     <div class="links">
       <a href="index.html">Acasă</a>
       <a href="produse.html">Produse</a>
