--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="ro">
 <head>
   <meta charset="utf-8">
-  <title>Magazin - Acasă</title>
+  <title>Lumi - Acasă</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="navbar">
-    <div class="brand">Magazin</div>
+    <div class="brand">Lumi</div>
     <div class="links">
       <a href="index.html"class="active">Acasă</a>
       <a href="produse.html">Produse</a>
@@ -15,9 +15,23 @@
     </div>
   </div>
 
-  <div class="content">
-    <p>Aici găsiți cele mai bune produse la prețuri avantajoase.</p>
+<header>
+  <h1>Lumi </h1>
+  <p>Bine ai venit - aici găsești mereu haine pe placul tău!</p>
+  <a href="#colectia-toamna" class="cta-button">Vezi colecția de toamnă</a>
+</header>
+
+<div class="carousel" id="colectia-toamna">
+  <div class="carousel-images">
+    <img src="img/Без названия (1).jpeg" alt="Rochie Toamnă">
+    <img src="https://i.pinimg.com/736x/da/6c/af/da6caf4edb547e20bb43542001f5de24.jpg" alt="Palton Elegant">
+    <img src="https://i.pinimg.com/1200x/0c/86/36/0c8636b8a3c3c28704dc696f42cf1c10.jpg" alt="Pulover Confortabil">
+    <img src="https://www.pinterest.com/pin/916412224200380779/" alt="Accesorii Trendy">
   </div>
+  <button class="prev">&#10094;</button>
+  <button class="next">&#10095;</button>
+</div>
+<script src="script.js" defer></script>
 </body>
 </html>
 
