--- a/index.html
+++ b/index.html
@@ -16,21 +16,17 @@
   </div>
 
 <header>
-  <h1>Lumi </h1>
-  <p>Bine ai venit - aici găsești mereu haine pe placul tău!</p>
-  <a href="#colectia-toamna" class="cta-button">Vezi colecția de toamnă</a>
-</header>
-
-<div class="carousel" id="colectia-toamna">
-  <div class="carousel-images">
-    <img src="img/Без названия (1).jpeg" alt="Rochie Toamnă">
-    <img src="https://i.pinimg.com/736x/da/6c/af/da6caf4edb547e20bb43542001f5de24.jpg" alt="Palton Elegant">
-    <img src="https://i.pinimg.com/1200x/0c/86/36/0c8636b8a3c3c28704dc696f42cf1c10.jpg" alt="Pulover Confortabil">
-    <img src="https://www.pinterest.com/pin/916412224200380779/" alt="Accesorii Trendy">
+  <section class="acasa">
+  <img class="poza-acasa" 
+       src="https://i.pinimg.com/736x/33/ce/64/33ce64aeb0af0ff2fbf371a2ccee8aeb.jpg" 
+       alt="model">
+  <div class="text-acasa">
+      <h1>Bun venit la Lumi</h1>
+      <p>Aici găsești haine pe placul și stilul tău!</p>
+      <a href="#colectia-toamna" class="cta-button">Vezi colecția de toamnă</a>
   </div>
-  <button class="prev">&#10094;</button>
-  <button class="next">&#10095;</button>
-</div>
+</section>
+</header>
 <script src="script.js" defer></script>
 </body>
 </html>
