Am adaugat functionalitatile butonului

--- a/index.html
+++ b/index.html
@@ -17,16 +17,63 @@
 
 <header>
   <section class="acasa">
-  <img class="poza-acasa" 
-       src="https://i.pinimg.com/736x/33/ce/64/33ce64aeb0af0ff2fbf371a2ccee8aeb.jpg" 
-       alt="model">
-  <div class="text-acasa">
+    <img class="poza-acasa" 
+         src="https://i.pinimg.com/736x/33/ce/64/33ce64aeb0af0ff2fbf371a2ccee8aeb.jpg" 
+         alt="model">
+    <div class="text-acasa">
       <h1>Bun venit la Lumi</h1>
       <p>Aici găsești haine pe placul și stilul tău!</p>
-      <a href="#colectia-toamna" class="cta-button">Vezi colecția de toamnă</a>
-  </div>
-</section>
+      <a href="#" class="cta-button" onclick="afiseazaColectia()">Vezi colecția de toamnă</a>
+    </div>
+  </section>
 </header>
+
+<section class="colectia-toamna" id="colectia-toamna">
+  <h1>Colecția de Toamnă</h1>
+  <section class="produse-magazin">
+    <div class="card-container">
+      <div class="card">
+        <img src="https://i.pinimg.com/1200x/9c/78/95/9c7895e9144e0e79400c765a124a644d.jpg" alt="Geacă" />
+        <h3>Jachetă fashion teddy brown</h3>
+        <p><strong>Preț:</strong> 750 lei</p>
+      </div>
+        <div class="card">
+        <img src="https://i.pinimg.com/1200x/00/d4/d0/00d4d0552dcaca93648fa121971d17c6.jpg" alt="Pulover" />
+        <h3>Pulover cardigan maro cu bordură deschisă</h3>
+        <p><strong>Preț:</strong> 250 lei</p>
+      </div>
+        <div class="card">
+        <img src="https://i.pinimg.com/736x/80/cd/cb/80cdcb139a58b8c384d08a0bf1f05700.jpg" alt="Rochie" />
+        <h3>Rochie fashion din tricot moale cu mâneci lungi</h3>
+        <p><strong>Preț:</strong> 550 lei</p>
+      </div>
+      <div class="card">
+        <img src="https://i.pinimg.com/1200x/0e/5f/60/0e5f6014c9aa771827e8dc59eeeff09a.jpg" alt="Pantaloni" />
+        <h3>Pantaloni palazzo cu pliuri decorative</h3>
+        <p><strong>Preț:</strong> 650 lei</p>
+      </div>
+      <div class="card">
+        <img src="https://i.pinimg.com/1200x/5c/ea/7d/5cea7d830f01a7ab35ec66390f573aa4.jpg" alt="Palton" />
+        <h3>Palton scurt bej cu design minimalist</h3>
+        <p><strong>Preț:</strong> 850 lei</p>
+      </div>
+      <div class="card">
+        <img src="https://i.pinimg.com/1200x/3b/7c/09/3b7c09664ed46070a1606f66bae283c7.jpg" alt="Pulover" />
+        <h3>Pulover oversize cu tiv asimetric</h3>
+        <p><strong>Preț:</strong> 350 lei</p>
+      </div>
+      <div class="card">
+        <img src="https://i.pinimg.com/1200x/21/f7/82/21f782bef8b2cf99ecba30c0248d8006.jpg" alt="Fustă" />
+        <h3>Fustă plisată Chocolate Belted</h3>
+        <p><strong>Preț:</strong> 250 lei</p>
+      </div>
+        <div class="card">
+        <img src="https://i.pinimg.com/736x/cc/2c/fd/cc2cfdd7dceeff78ad140e3bf27ec00a.jpg" alt="Palton" />
+        <h3>Palton Autumn Chic cu design minimalist</h3>
+        <p><strong>Preț:</strong> 1200 lei</p>
+      </div>
+</section>
+
 <script src="script.js" defer></script>
 </body>
 </html>
