Am adaugat butonul de schimbare a temei

--- a/contacte.html
+++ b/contacte.html
@@ -15,6 +15,7 @@
       <a href="produse.html">Produse</a>
       <a href="contacte.html" class="active">Contacte</a>
     </div>
+    <button id="theme-toggle">🌙</button>
   </div>
    <h1 class="contacte-titlu">Contacte</h1>
     <div class="contacte-card">
@@ -35,4 +36,5 @@
       </form>
     </div>
   </div>
+  <script src="script.js" defer></script>
 </html>
