--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <div class="navbar">
     <div class="brand">Lumi</div>
     <div class="links">
-      <a href="index.html"class="active">Acasă</a>
+      <a href="index.html" class="active">Acasă</a>
       <a href="produse.html">Produse</a>
       <a href="contacte.html">Contacte</a>
     </div>
+    <button id="theme-toggle">🌙</button>
   </div>
 
 <header>
@@ -37,12 +38,12 @@
         <h3>Jachetă fashion teddy brown</h3>
         <p><strong>Preț:</strong> 750 lei</p>
       </div>
-        <div class="card">
+      <div class="card">
         <img src="https://i.pinimg.com/1200x/00/d4/d0/00d4d0552dcaca93648fa121971d17c6.jpg" alt="Pulover" />
         <h3>Pulover cardigan maro cu bordură deschisă</h3>
         <p><strong>Preț:</strong> 250 lei</p>
       </div>
-        <div class="card">
+      <div class="card">
         <img src="https://i.pinimg.com/736x/80/cd/cb/80cdcb139a58b8c384d08a0bf1f05700.jpg" alt="Rochie" />
         <h3>Rochie fashion din tricot moale cu mâneci lungi</h3>
         <p><strong>Preț:</strong> 550 lei</p>
@@ -67,12 +68,16 @@
         <h3>Fustă plisată Chocolate Belted</h3>
         <p><strong>Preț:</strong> 250 lei</p>
       </div>
-        <div class="card">
+      <div class="card">
         <img src="https://i.pinimg.com/736x/cc/2c/fd/cc2cfdd7dceeff78ad140e3bf27ec00a.jpg" alt="Palton" />
         <h3>Palton Autumn Chic cu design minimalist</h3>
+      </div>
+    </div>
+  </section>
 </section>
 
 <script src="script.js" defer></script>
 </body>
 </html>
+
 
