--- a/produse.html
+++ b/produse.html
@@ -13,6 +13,7 @@
       <a href="produse.html" class="active">Produse</a>
       <a href="contacte.html">Contacte</a>
     </div>
+    <button id="theme-toggle">🌙</button>
   </div>
 
   <section class="produse-magazin">
@@ -119,5 +120,6 @@
       </div>
     </div>
   </section>
+  <script src="script.js" defer></script>
 </body>
 </html>
