Am adaugat pozele din pagina Produse in json

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ro">
 <head>
   <meta charset="utf-8">
-  <title>Lumi - Acasă</title>
+  <title></title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,10 +17,8 @@
   </div>
 
 <header>
-  <section class="acasa">
-    <img class="poza-acasa" 
-         src="https://i.pinimg.com/736x/33/ce/64/33ce64aeb0af0ff2fbf371a2ccee8aeb.jpg" 
-         alt="model">
+  <section class="acasa" id="acasa">
+    <div class="acasa-images"></div>
     <div class="text-acasa">
       <h1>Bun venit la Lumi</h1>
       <p>Aici găsești haine pe placul și stilul tău!</p>
@@ -28,7 +26,6 @@
     </div>
   </section>
 </header>
-
 <section class="colectia-toamna" id="colectia-toamna">
   <h1>Colecția de Toamnă</h1>
   <section class="produse-magazin">
