--- a/produse.html
+++ b/produse.html
@@ -17,108 +17,7 @@
   </div>
 
   <section class="produse-magazin">
-    <div class="card-container">
-      <div class="card">
-        <img src="https://i.pinimg.com/736x/00/39/5e/00395e318c0cb2b3aa00998b9bd92c89.jpg" alt="Geacă" />
-        <h3>Geacă de piele</h3>
-        <p><strong>Preț:</strong> 1100 lei</p>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/1200x/14/d1/56/14d156c49216342456049103c3b0d07e.jpg" alt="Geacă" />
-        <h3>Geacă Crop Satinată cu Șnur Reglabil</h3>
-        <p><strong>Preț:</strong> 950 lei</p>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/736x/ff/aa/59/ffaa59da7e950825f4ea5dfb0fcc2fa0.jpg" alt="Bluza" />
-        <h3>Bluză Transparentă din Tul cu Efect Drapat</h3>
-        <p><strong>Preț:</strong> 350 lei</p>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/736x/d7/3e/ff/d73eff33af0382facab88f0307c97b9d.jpg" alt="Geacă" />
-        <h3>Geacă Fashion cu Cusături Evidențiate</h3>
-        <p><strong>Preț:</strong> 950 lei</p>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/736x/2d/e5/de/2de5dedbf59919061ab36f0d25e2bc42.jpg" alt="top" />
-        <h3>Top Fashion Asimetric cu Detaliu de Șiret</h3>
-        <p><strong>Preț:</strong> 550lei</p>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/736x/53/5f/f7/535ff7f297779cf0755fffb85f807b0a.jpg" alt="palton" />
-        <h3>Palton din Piele Ecologică cu Cordon în Talie</h3>
-        <p><strong>Preț:</strong> 1500 lei</p>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/1200x/ab/8a/7d/ab8a7d67c94856df866a42eee3aeaace.jpg" alt="Bomber" />
-        <h3>Bomber din Eco-Piele Verde cu Mâneci Elastice</h3>
-        <p><strong>Preț:</strong> 650 lei</p>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/1200x/71/13/a0/7113a019afe780cfbbec8210f6cbdf2d.jpg" alt="pantaloni" />
-        <h3>Cargo Pants Oversized cu Curea Metalică</h3>
-        <p><strong>Preț:</strong> 450 lei</p>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/1200x/2d/0c/c8/2d0cc829ef481913d283cfd7a1fe6276.jpg" alt="costum" />
-        <h3>Set Denim Asimetric Gri - Jachetă & Fustă-Pantalon</h3>
-        <p><strong>Preț:</strong> 650 lei</p>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/1200x/74/f7/99/74f799687794319e05b6bc26c1f430ae.jpg" alt="rochie" />
-        <h3>Rochie Couture Asimetrică-Pleated Fantasy</h3>
-        <p><strong>Preț:</strong> 1200 lei</p>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/736x/10/a3/6c/10a36c7e1d79ce0e3686d1ad204aa6b7.jpg" alt="Pantaloni" />
-        <h3>Blugi - Dark Rebellion</h3>
-        <p><strong>Preț:</strong> 550 lei</p>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/736x/2f/67/fa/2f67fa254e80f3037c1fc5fff44220fc.jpg" alt="fusta" />
-        <h3>Fustă Mini Neagră Ajustabilă - Sleek Night</h3>
-        <p><strong>Preț:</strong> 350 lei</p>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/736x/27/28/41/272841ccdeaad8b1a68c35be38a14f77.jpg" alt="Bluza" />
-        <h3>Top Transparent cu Legături - Dark Mist</h3>
-        <p><strong>Preț:</strong> 250 lei</p>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/1200x/5d/1f/dd/5d1fdd7ba57e1382574ec93546a03d41.jpg" alt="pantaloni" />
-        <h3>Pantaloni Sculpturali cu Panouri</h3>
-        <p><strong>Preț:</strong> 450 lei</p>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/736x/ff/b3/78/ffb3783a3edfd7a21dea12b5ff13a77b.jpg" alt="pantaloni" />
-        <h3>Pantaloni transparenți evazați -Midnight Flow</h3>
-        <p><strong>Preț:</strong> 500 lei</p>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/736x/3a/8e/1f/3a8e1fd2746d510986467ef185d7f881.jpg" alt="top" />
-        <h3>Top sofisticat din voal - Pure Aura</h3>
-        <p><strong>Preț:</strong> 200 lei</p>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/736x/57/a3/f0/57a3f0429457c623832d59057e7a22be.jpg" alt="fusta" />
-        <h3>Fustă arhitecturală - Sculpted Vision</h3>
-        <p><strong>Preț:</strong> 500 lei </p>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/1200x/be/3e/a0/be3ea0124ca34ade99a6594b25f23d87.jpg" alt="rochie" />
-        <h3>Rochie scurtă cu fustă amplă Luna Noir</h3>
-        <p><strong>Preț:</strong> 650 lei</p>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/1200x/cc/4d/fb/cc4dfb86aa580388d89aca6958c7077a.jpg" alt="corset" />
-        <h3>Bustieră structurată Cream Desire</h3>
-        <p><strong>Preț:</strong> 444 lei</p>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/736x/56/87/2a/56872aeae195b3261dbe2fe6d2631cee.jpg" alt="pantaloni" />
-        <h3>Blugi Urban Drift</h3>
-        <p><strong>Preț:</strong> 850 lei</p>
-      </div>
-    </div>
+    <div class="card-container" id="produse-container"></div>
   </section>
   <script src="script.js" defer></script>
 </body>
